<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:inputType="number"
        android:hint="@string/monthly_savings"
        android:id="@+id/monthlySaving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/intrest_rate"
        android:id="@+id/intrestRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:inputType="number"
        android:hint="@string/your_current_age"
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:inputType="number"
        android:hint="@string/planned_retirment_age"
        android:id="@+id/retirmentAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:inputType="number"
        android:hint="@string/current_saving"
        android:id="@+id/currentSaving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:id="@+id/calculate"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>